:wrench: close missing front

--- a/kao.sty
+++ b/kao.sty
@@ -1077,16 +1077,16 @@
 	\RequirePackage{amssymb} % Must be loaded before unicode-math
 	\RequirePackage[force]{filehook} % Fixes an error
 	\RequirePackage{unicode-math} % Math fonts in xetexorluatex
-	\setromanfont[ % Libertinus Serif font
-		Scale=1.04
-	]{Libertinus Serif}
-	\setsansfont[ % Libertinus Sans font
-		Scale=1
-	]{Libertinus Sans}
-	\setmonofont[ % Libertinus Mono font
-		Scale=.89
-	]{Liberation Mono}
-	\setmathfont{Libertinus Math} % Libertinus Math font
+	% \setromanfont[ % Libertinus Serif font
+	% 	Scale=1.04
+	% ]{Libertinus Serif}
+	% \setsansfont[ % Libertinus Sans font
+	% 	Scale=1
+	% ]{Libertinus Sans}
+	% \setmonofont[ % Libertinus Mono font
+	% 	Scale=.89
+	% ]{Liberation Mono}
+	% \setmathfont{Libertinus Math} % Libertinus Math font
 	\ifluatex
 	\else
 		\RequirePackage{morewrites} % Fix some errors related to floats (not necessary with LuaLaTeX
