--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 	twoside=false, % Use different layouts for even and odd pages (in particular, if twoside=true, the margin column will be always on the outside)
 	%open=any, % If twoside=true, uncomment this to force new chapters to start on any page, not only on right (odd) pages
 	secnumdepth=1, % How deep to number headings. Defaults to 1 (sections)
-]{kaobook}
+]{styles/kaobook}
 
 % Choose the language
 \usepackage[english]{babel} % Load characters and hyphenation
@@ -16,14 +16,14 @@
 %\usepackage{showlabels} % Uncomment to output the content of \label commands to the document where they are used
 
 % Load the bibliography package
-\usepackage{kaobiblio}
+\usepackage{styles/kaobiblio}
 \addbibresource{reference.bib} % Bibliography file
 
 % Load mathematical packages for theorems and related environments
-\usepackage{kaotheorems}
+\usepackage{styles/kaotheorems}
 
 % Load the package for hyperreferences
-\usepackage{kaorefs}
+\usepackage{styles/kaorefs}
 
 \graphicspath{{images/}{./}} % Paths where images are looked for
 
