:bug: fix the bug of error reference

--- a/styles/kaotheorems.sty
+++ b/styles/kaotheorems.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{kaotheorems}
+\ProvidesPackage{styles/kaotheorems}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
@@ -352,7 +352,7 @@
 		Refname={Definition,Definitions},
 		numberwithin=section,
 	]{definition}
-	
+
 	% Theorems using the 'kaoassumption' style
 	\theoremstyle{kaoassumption}
 	\declaretheorem[
@@ -393,4 +393,3 @@
 	%\renewcommand{\thetheorem}{\arabic{subsection}.\arabic{theorem}}
 	%\renewcommand{\qedsymbol}{$\blacksquare$}
 \fi
-
