--- a/styles/kaobiblio.sty
+++ b/styles/kaobiblio.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{kaobiblio}
+\ProvidesPackage{styles/kaobiblio}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
@@ -21,7 +21,7 @@
 \DeclareBoolOption{addspace}% If true, automatically add a space before printing the citation marker
 \DeclareBoolOption{linkeverything}% If true, the author name is a hyperlink in citation styles that support it
 
-% Choose the default options, which will be overwritten by the options 
+% Choose the default options, which will be overwritten by the options
 % passed to this package.
 \PassOptionsToPackage{
 	%style=numeric-comp,
@@ -405,7 +405,7 @@
 %	CITATION ENVIRONMENTS
 %----------------------------------------------------------------------------------------
 
-% TODO: create a fancy environment for this. Perhaps printing also the 
+% TODO: create a fancy environment for this. Perhaps printing also the
 % abstract.
 
 % Cite commands (assuming biblatex is loaded)
