--- a/styles/kaorefs.sty
+++ b/styles/kaorefs.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{kaorefs}
+\ProvidesPackage{styles/kaorefs}
 
 %----------------------------------------------------------------------------------------
 %	PACKAGE OPTIONS AND DEPENDENCIES
